Content Update css

--- a/RebozosApp/Pages/index.html
+++ b/RebozosApp/Pages/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta content="width=device-width" name="viewport">
     <title>Rebozos Sta María</title>
-    <link rel="stylesheet" href="Design/Styles/main.css">
-    <link rel="stylesheet" href="Design/Styles/navigation.css" title="Menu CSS">
-    <link rel="stylesheet" href="Design/Styles/media.css">
+    <link rel="stylesheet" href="../Design/Styles/main.css">
+    <link rel="stylesheet" href="../Design/Styles/navigation.css" title="Menu CSS">
+    <link rel="stylesheet" href="../Design/Styles/media.css">
     <script src="Design/Enhancements/menu-scroll.js"></script>
 </head>
 <body>
