Content Update images

--- a/RebozosApp/Pages/index.html
+++ b/RebozosApp/Pages/index.html
@@ -13,12 +13,12 @@
     <header>
         <nav>
             <div class="logos">
-                <a href="index.html" id="logo-lg"><img class="logo" src="Design/Images/logo.png" alt="Logo Arte Santa María"></a>
-                <a href="index.html" id="logo-sm"><img class="logo" src="Design/Images/logo-sm.jpg" alt="Logo Arte Santa María"></a>
+                <a href="index.html" id="logo-lg"><img class="logo" src="../Design/Images/logo.png" alt="Logo Arte Santa María"></a>
+                <a href="index.html" id="logo-sm"><img class="logo" src="../Design/Images/logo-sm.jpg" alt="Logo Arte Santa María"></a>
             </div>
             <div id="navbar">
                 <label for="drop" class="toggle">MENU</label>
-                <input type="checkbox" id="drop" />
+                <input type="checkbox" id="drop" />s
                 <ul class="menu">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
